fixed some overflow problems on home section 2

--- a/styles/HomeSection/HomeSection2.module.css
+++ b/styles/HomeSection/HomeSection2.module.css
@@ -3,7 +3,7 @@
     --border-color: red;
     --border-color-mq: blue;
     background-color: #140E3A;
-    width: 100vw;
+    /* width: 100vw; */
   }
 
 
@@ -21,8 +21,7 @@
     display: flex;
     height: 100vh;
     min-width: 50vw;
-
-    flex-flow: column; 
+    flex-direction: column; 
 }
 
 .col3 {
@@ -46,11 +45,7 @@
 .row1 {
     border: var(--border-status);
     border-color: var(--border-color);
-    height: fit-content;
-    width: fit-content;
     margin-top: 15vh;
-    display: flex; 
-    justify-items: center;
     text-align: center;
 }
 
